feat: add Node.js, Java, Rust optimization examples with benchmarks